--- a/assets/style.css
+++ b/assets/style.css
@@ -240,7 +240,7 @@ nav .menu-item:nth-of-type(4):hover ~ #sub-menu-container #sub-menu-holder {
     border-style: solid;
 }
 
-.menu-text .active {
+p .active {
     font-weight: 700;
 }
 
