--- a/assets/style.css
+++ b/assets/style.css
@@ -407,32 +407,6 @@ p .active {
     top: 0.2em;
 }
 
-#info-box {
-    position: absolute;
-    bottom: 2em;
-    right: 2em;
-}
-
-#info-box ul {
-    list-style: none;
-}
-
-#info-box a {
-    color: white;
-    text-decoration: none;
-    text-align: right;
-    padding: 0.5em 0;
-    transition: all 0.1s ease-out;
-    display: block;
-    text-transform: uppercase;
-    font-size: 1.25em;
-    font-weight: 900;
-    letter-spacing: 1px;
-}
-
-#info-box a:hover {
-    color: rgba(255,255,255,0.5);
-}
 
 
 
@@ -523,4 +497,35 @@ footer {
     position:fixed;
     bottom: 0px;
     font-family: 'Outfit', sans-serif;
+}
+
+
+/* ------------------------------------------------------------------------------
+INFO BOX
+------------------------------------------------------------------------------ */
+#info-box {
+    position: absolute;
+    bottom: 2em;
+    right: 2em;
+}
+
+#info-box ul {
+    list-style: none;
+}
+
+#info-box a {
+    color: white;
+    text-decoration: none;
+    text-align: right;
+    padding: 0.5em 0;
+    transition: all 0.1s ease-out;
+    display: block;
+    text-transform: uppercase;
+    font-size: 1.25em;
+    font-weight: 900;
+    letter-spacing: 1px;
+}
+
+#info-box a:hover {
+    color: rgba(255,255,255,0.5);
 }
