--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -469,12 +469,10 @@ CONTENIDO
 
 
 #contenido img {
-    padding-top: 20px;
-    padding-bottom: 20px;
+padding: 20px 0 20px 0;
     display: flex;
     width: 500px;
     margin: 0 auto;
-    margin-top: 15px;
     overflow: hidden;
     justify-content: center;
 }
