--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,6 @@
 6. FOOTER
 ------------------------------------------------------------------------------ */
 
-
 /* ------------------------------------------------------------------------------
 FUENTES
 ------------------------------------------------------------------------------ */
@@ -30,457 +29,452 @@ FUENTES
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap');
 /* font-family: 'Ubuntu', sans-serif; */
 
-
 /* ------------------------------------------------------------------------------
 ESTILOS GENERALES
 ------------------------------------------------------------------------------ */
 * {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 :root {
-    --menu-width: 45em; /* Width of menu */
-    --items: 3; /* Number of items you have */
-    --item-width: calc(var(--menu-width) / var(--items));
+	--menu-width: 45em; /* Width of menu */
+	--items: 3; /* Number of items you have */
+	--item-width: calc(var(--menu-width) / var(--items));
 }
-
-
-
-
 
 body {
-    position: relative;
-    background-color:#E6CCA9;
-    width: 100%;
-    color: white;
+	position: relative;
+	background-color: #e6cca9;
+	width: 100%;
+	color: white;
 }
-
-
-
-
-
 
 /* ------------------------------------------------------------------------------
 HEADER
 ------------------------------------------------------------------------------ */
 header {
-    font-family: 'Outfit', sans-serif;
-    background: #122562;
-    height: 60px;
-    width: 100%;
+	font-family: 'Outfit', sans-serif;
+	background: #122562;
+	height: 60px;
+	width: 100%;
 }
 
 nav {
-    width: var(--menu-width);
-    display: flex;
-    transform-style: preserve-3d;
-    justify-content: space-evenly;
-    position: relative;
-    z-index: 2;
-    margin: 0px auto;
-    perspective: 2000px;
-    flex-wrap: wrap;
-    top: 0em;
+	width: var(--menu-width);
+	display: flex;
+	transform-style: preserve-3d;
+	justify-content: space-evenly;
+	position: relative;
+	z-index: 2;
+	margin: 0px auto;
+	perspective: 2000px;
+	flex-wrap: wrap;
+	top: 0em;
 }
 
 nav .menu-item {
-    color: #ffffff;
-    font-weight: 600;
-    transform-style: preserve-3d;
-    flex-grow: 1;
-    display: flex;
-    flex-basis: var(--item-width);
-    box-sizing: border-box;
-    padding: 1em 1.5em;
-    justify-content: center;
-    perspective: 200px;
-    letter-spacing: 0.5px;
-    min-height: 7.5em;
+	color: #ffffff;
+	font-weight: 600;
+	transform-style: preserve-3d;
+	flex-grow: 1;
+	display: flex;
+	flex-basis: var(--item-width);
+	box-sizing: border-box;
+	padding: 1em 1.5em;
+	justify-content: center;
+	perspective: 200px;
+	letter-spacing: 0.5px;
+	min-height: 7.5em;
 }
 
-nav .menu-text, nav .menu-text a {
-    font-size: 1em;
-    color: #ffffff;
-    text-decoration: none;
-    text-shadow: 0 1px 5px rgba(0,0,0,0.1);
-    transition: color 0.1s ease-out;
-    text-align: center;
+nav .menu-text,
+nav .menu-text a {
+	font-size: 1em;
+	color: #ffffff;
+	text-decoration: none;
+	text-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+	transition: color 0.1s ease-out;
+	text-align: center;
 }
 
 nav .menu-text a:hover {
-    color: #E6CCA9;
+	color: #e6cca9;
 }
 
 #sub-menu-holder {
-    pointer-events: none;
-    color: #ffffff;
-    font-weight: normal;
-    padding: 1em;
-    position: absolute;
-    transition: opacity 2 ease-out;
-    transform: rotateX(-25deg) scale(1);
-    transform-origin: 50% 7em 0em;
-    opacity: 0;
-    box-shadow: 0 2px 7px rgba(0,0,0,0.1), 0 2px 20px rgba(0,0,0,0.3);
-    box-sizing: border-box;
-    background: #122562;
-    display: block;
-    height: 300px;
-    width: calc(var(--menu-width) * 1.5);
-    align-items: center;
-    justify-content: center;
+	pointer-events: none;
+	color: #ffffff;
+	font-weight: normal;
+	padding: 1em;
+	position: absolute;
+	transition: opacity 2 ease-out;
+	transform: rotateX(-25deg) scale(1);
+	transform-origin: 50% 7em 0em;
+	opacity: 0;
+	box-shadow: 0 2px 7px rgba(0, 0, 0, 0.1), 0 2px 20px rgba(0, 0, 0, 0.3);
+	box-sizing: border-box;
+	background: #122562;
+	display: block;
+	height: 300px;
+	width: calc(var(--menu-width) * 1.5);
+	align-items: center;
+	justify-content: center;
 }
 
 #sub-menu-container {
-    position: absolute;
-    z-index: -1;
-    top: 2.5em;
-    width: 100%;
+	position: absolute;
+	z-index: -1;
+	top: 2.5em;
+	width: 100%;
 }
 
 nav .menu-item:hover ~ #sub-menu-container #sub-menu-holder {
-    animation: clipPath 0.25s ease-out 1 forwards;        
-    transition: clip-path 0.25s ease-out, 
-    left 0.15s ease-out, 
-    height 0.15s ease-out;
-    opacity: 1;
-    right: auto;
+	animation: clipPath 0.25s ease-out 1 forwards;
+	transition: clip-path 0.25s ease-out, left 0.15s ease-out, height 0.15s ease-out;
+	opacity: 1;
+	right: auto;
 }
 
 nav .menu-item:nth-of-type(1):hover ~ #sub-menu-container #sub-menu-holder,
 nav .menu-item:nth-of-type(4):hover ~ #sub-menu-container #sub-menu-holder {
-    clip-path: inset(0 28.75em 0 0 round 10px);
-    height: 22em;
+	clip-path: inset(0 28.75em 0 0 round 10px);
+	height: 22em;
 }
 
 nav .menu-item:nth-of-type(2):hover ~ #sub-menu-container #sub-menu-holder,
 nav .menu-item:nth-of-type(3):hover ~ #sub-menu-container #sub-menu-holder {
-    clip-path: inset(0 15em 0 0 round 10px);
+	clip-path: inset(0 15em 0 0 round 10px);
 }
 
 nav .menu-item:nth-of-type(1):hover ~ #sub-menu-container #sub-menu-holder {
-    left: calc(-9em + -1px);
+	left: calc(-9em + -1px);
 }
 
 nav .menu-item:nth-of-type(2):hover ~ #sub-menu-container #sub-menu-holder {
-    left: calc(-6.5em + -1px);
-    height: 18.75em;
+	left: calc(-6.5em + -1px);
+	height: 18.75em;
 }
 
 nav .menu-item:nth-of-type(3):hover ~ #sub-menu-container #sub-menu-holder {
-    left: calc(2.75em + 1px);
-    height: 24.5em;
+	left: calc(2.75em + 1px);
+	height: 24.5em;
 }
 
 nav .menu-item:nth-of-type(4):hover ~ #sub-menu-container #sub-menu-holder {
-    left: calc(19em + 1px);
+	left: calc(19em + 1px);
 }
 
 .menu-item .sub-menu {
-    position: absolute;
-    top: 7em;
-    min-width: 27.5em;
-    pointer-events: none;
-    box-sizing: border-box;
-    z-index: 999;
-    clip-path: inset(0 10em 10em 15em);
-    opacity: 0;
-    font-weight: initial;
-    padding: 1.5em;
-    transition: all 0.25s ease-out, opacity 0.25s ease-in, margin-left 0.25s ease-out, clip-path 0.15s ease-out;
+	position: absolute;
+	top: 7em;
+	min-width: 27.5em;
+	pointer-events: none;
+	box-sizing: border-box;
+	z-index: 999;
+	clip-path: inset(0 10em 10em 15em);
+	opacity: 0;
+	font-weight: initial;
+	padding: 1.5em;
+	transition: all 0.25s ease-out, opacity 0.25s ease-in, margin-left 0.25s ease-out, clip-path 0.15s ease-out;
 }
 
 .menu-item .sub-menu.double {
-    min-width: 41.25em;
-    height: 18.75em;
-    display: grid;
-    grid-template-columns: 50% 50%;
+	min-width: 41.25em;
+	height: 18.75em;
+	display: grid;
+	grid-template-columns: 50% 50%;
 }
 
 .menu-item .sub-menu.triple {
-    width: 40em;
-    height: 25em;
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    place-items: center;
-    align-self: start;
+	width: 40em;
+	height: 25em;
+	display: grid;
+	grid-template-columns: 25% 25% 25% 25%;
+	place-items: center;
+	align-self: start;
 }
 
 .menu-item:hover .sub-menu {
-    pointer-events: all;
-    clip-path: inset(0 0 0 0);
+	pointer-events: all;
+	clip-path: inset(0 0 0 0);
 }
 
 /*flecha*/
 .menu-text:after {
-    transition: bottom 0.25s ease-out, opacity 0.01s ease-out 0.01s;
-    opacity: 0;
-    content: '';
-    position: absolute;
-    pointer-events: none;
-    bottom: -5em;
-    left: calc(50% - 10px);
-    border-color: transparent transparent #122562 transparent;
-    border-width: 10px;
-    border-style: solid;
+	transition: bottom 0.25s ease-out, opacity 0.01s ease-out 0.01s;
+	opacity: 0;
+	content: '';
+	position: absolute;
+	pointer-events: none;
+	bottom: -5em;
+	left: calc(50% - 10px);
+	border-color: transparent transparent #122562 transparent;
+	border-width: 10px;
+	border-style: solid;
 }
 
 .menu-item:hover .menu-text:after {
-    bottom: 0.5em;
-    opacity: 1;
-    transition: bottom 0.25s ease-out, opacity 0.01s ease-out 0.15s;
+	bottom: 0.5em;
+	opacity: 1;
+	transition: bottom 0.25s ease-out, opacity 0.01s ease-out 0.15s;
 }
 
 .menu-item:hover .sub-menu {
-    opacity: 1;
-    margin-left: 0;
+	opacity: 1;
+	margin-left: 0;
 }
 
-.menu-item:hover ~ #sub-menu-container #sub-menu-holder  {
-    transition: transform 0.25s ease-out, opacity 0.25s ease-out, clip-path 0.25s ease-out;
+.menu-item:hover ~ #sub-menu-container #sub-menu-holder {
+	transition: transform 0.25s ease-out, opacity 0.25s ease-out, clip-path 0.25s ease-out;
 }
 
 @keyframes clipPath {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        transform: rotateX(0deg) scale(1);
-        top: 4.5em;
-        opacity: 1;        
-    }
+	0% {
+		opacity: 0;
+	}
+	100% {
+		transform: rotateX(0deg) scale(1);
+		top: 4.5em;
+		opacity: 1;
+	}
 }
 
 /* Menu specifico */
 .menu-item .title {
-    font-weight: 500;
-    color: #ffffff;
-    margin: 0 0 0.25em 0;
+	font-weight: 500;
+	color: #ffffff;
+	margin: 0 0 0.25em 0;
 }
 
 .menu-item .icon-box * {
-    transition: all 0.1s ease-out;
-    position: relative;
+	transition: all 0.1s ease-out;
+	position: relative;
 }
 
 .menu-item .icon-box.space {
-    margin-bottom: 1.25em;
+	margin-bottom: 1.25em;
 }
 
 .menu-item .icon-box.flat {
-    height: 1.5em;
-    margin-bottom: 0.5em;
+	height: 1.5em;
+	margin-bottom: 0.5em;
 }
 
-.menu-item .icon, .menu-item .text {
-    float: left;
-    color: #ffffff;
+.menu-item .icon,
+.menu-item .text {
+	float: left;
+	color: #ffffff;
 }
 
 .menu-item a {
-    color: #ffffff;
-    text-decoration: none;
+	color: #ffffff;
+	text-decoration: none;
 }
 
 .menu-item .icon {
-    color: #ffffff;
-    font-size: 1.25em;
-    margin: 0 1em 0 0;
+	color: #ffffff;
+	font-size: 1.25em;
+	margin: 0 1em 0 0;
 }
 
 .menu-item .icon-box {
-    cursor: pointer;
+	cursor: pointer;
 }
 
 .menu-item .icon-box {
-    float: left;
-    width: 100%;
-    margin: 0;
-    height: 4em;
-    row-gap: 0;
-    line-height: 1em;
+	float: left;
+	width: 100%;
+	margin: 0;
+	height: 4em;
+	row-gap: 0;
+	line-height: 1em;
 }
 
 .menu-item .icon-box .text i {
-    clip-path: inset(0 100% 0 0);
-    font-size: 0.75em;
-    position: relative;
-    top: -1px;
+	clip-path: inset(0 100% 0 0);
+	font-size: 0.75em;
+	position: relative;
+	top: -1px;
 }
 
 .menu-item .icon-box:hover .text i {
-    clip-path: inset(0 0 0 0);
-    transition: clip-path 0.1s ease-out;
+	clip-path: inset(0 0 0 0);
+	transition: clip-path 0.1s ease-out;
 }
 
-.menu-item .icon-box:hover .icon, .menu-item .icon-box:hover .title, .menu-item .icon-box:hover .sub-text {
-    color: #E6CCA9;
+.menu-item .icon-box:hover .icon,
+.menu-item .icon-box:hover .title,
+.menu-item .icon-box:hover .sub-text {
+	color: #e6cca9;
 }
 
 #sub-menu-bottom {
-    background: #200049;
-    position: absolute;
-    bottom: 0;
-    opacity: 0;
-    transition: all 0.25s ease-out, height 0.1s ease-out;
-    left: 0;
-    width: 100%;
-    height: 5em;
+	background: #200049;
+	position: absolute;
+	bottom: 0;
+	opacity: 0;
+	transition: all 0.25s ease-out, height 0.1s ease-out;
+	left: 0;
+	width: 100%;
+	height: 5em;
 }
 
 .bottom-container {
-    grid-area: 4 / -3 / 4 / 3;
-    padding-top: 1.5em;
-    color: #ffffff;
-    font-weight: 500;
+	grid-area: 4 / -3 / 4 / 3;
+	padding-top: 1.5em;
+	color: #ffffff;
+	font-weight: 500;
 }
 
 .top-container {
-    grid-area: 1 / -3 / 1 / 3;
-    margin: 0 0 2em 0;
+	grid-area: 1 / -3 / 1 / 3;
+	margin: 0 0 2em 0;
 }
 
 .bottom-container a {
-    float: right;
-    background: #ffffff;
-    padding: 0.5em 1em;
-    border-radius: 100px;
-    position: absolute;
-    color: #122562;
-    font-weight: bold;
-    text-decoration: none;
-    right: 1.5em;
-    bottom: 1.5em;
+	float: right;
+	background: #ffffff;
+	padding: 0.5em 1em;
+	border-radius: 100px;
+	position: absolute;
+	color: #122562;
+	font-weight: bold;
+	text-decoration: none;
+	right: 1.5em;
+	bottom: 1.5em;
 }
 
 .bottom-container a:hover {
-    background: linear-gradient(90deg, #8ea4b136, #a3b5bf33);
-    color: #ffffff;
+	background: linear-gradient(90deg, #8ea4b136, #a3b5bf33);
+	color: #ffffff;
 }
 
 .bottom-container a.active {
-    background: linear-gradient(90deg, #8ea4b136, #a3b5bf33);
-    color: #ffffff;
+	background: linear-gradient(90deg, #8ea4b136, #a3b5bf33);
+	color: #ffffff;
 }
 
 .sub-menu h3 {
-    font-size: 1em;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 0.5px;
-    color: #ffffff;
-    margin: 0.75em 0;
-    text-align: center;
+	font-size: 1em;
+	font-weight: bold;
+	text-transform: uppercase;
+	letter-spacing: 0.5px;
+	color: #ffffff;
+	margin: 0.75em 0;
+	text-align: center;
 }
 
 .sub-menu .box a {
-    width: 100%;
-    float: left;
-    text-align: center;
-    font-size: 1em;
-    line-height: 1.75em;
-    color: #ffffff;
-    text-decoration: none;
+	width: 100%;
+	float: left;
+	text-align: center;
+	font-size: 1em;
+	line-height: 1.75em;
+	color: #ffffff;
+	text-decoration: none;
 }
 
 .sub-menu .box a:hover {
-    color: #E6CCA9;
+	color: #e6cca9;
 }
 
 .box {
-    margin: 0 0 3em 0;
+	margin: 0 0 3em 0;
 }
 
 .icon.big i {
-    font-size: 1.25em;
-    top: 0.2em;
+	font-size: 1.25em;
+	top: 0.2em;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 /* ------------------------------------------------------------------------------
 CONTENIDO
 ------------------------------------------------------------------------------ */
 #contenido {
-    margin: 0 auto;
-    padding: 20px;
-    width: 70%;
-    margin-bottom: 80px;
+	margin: 0 auto;
+	padding: 20px;
+	width: 70%;
+	margin-bottom: 80px;
 }
 
-#contenido h1,h2 {
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-    text-transform: uppercase;
+#contenido h1,
+h2 {
+	font-family: 'Raleway', sans-serif;
+	text-align: center;
+	text-transform: uppercase;
 }
 
-#contenido h3,h4 {
-    font-family: 'Raleway', sans-serif;
-    text-align: justify;
-    text-transform: uppercase;
+#contenido h3,
+h4 {
+	font-family: 'Raleway', sans-serif;
+	text-align: justify;
+	text-transform: uppercase;
 }
 
 #contenido p {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 17px;
+	font-family: 'Ubuntu', sans-serif;
+	font-size: 17px;
 }
 
-#contenido ol, ul {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 17px;
+#contenido ol,
+ul {
+	font-family: 'Ubuntu', sans-serif;
+	font-size: 17px;
 }
 
 #contenido li a:hover {
-    text-decoration: underline;
+	text-decoration: underline;
 }
 
 #contenido a {
-    font-family: 'Ubuntu', sans-serif;
-    font-size: 17px;
-    text-decoration: none;
-    color: #ffffff;
+	font-family: 'Ubuntu', sans-serif;
+	font-size: 17px;
+	text-decoration: none;
+	color: #ffffff;
 }
 
 #contenido .texto {
-    margin: 0 auto;
-    width: 50%;
-    text-align: justify;
+	margin: 0 auto;
+	width: 50%;
+	text-align: justify;
 }
 
-
 #contenido img {
-padding: 20px 0 20px 0;
-    display: flex;
-    width: 500px;
-    margin: 0 auto;
-    overflow: hidden;
-    justify-content: center;
+	padding: 20px 0 20px 0;
+	display: flex;
+	width: 500px;
+	margin: 0 auto;
+	overflow: hidden;
+	justify-content: center;
 }
 
 .linea {
-    margin: 15px;
-    border: 2px solid #122562;
-    border-radius: 50%;
+	margin: 15px;
+	border: 2px solid #122562;
+	border-radius: 50%;
+}
+
+.contenedor {
+	height: 400px;
+    align-items: center;
+    justify-content: center;
+}
+
+.izquierda {
+	float: left;
+	width: 50%;
+    justify-content: center;
+}
+
+.derecha {
+	width: 40%;
+	float: left;
+    justify-content: center;
+}
+
+.caja-texto {
+    padding: 10px 10px 10px 10px;
 }
 
 
@@ -488,16 +482,13 @@ padding: 20px 0 20px 0;
 
 
 
-
-
-
-
-
-
-
-
-
-
+.next {
+    width: var(--menu-width);
+	color: #ffffff;
+	display: flex;
+	position: fixed;
+	bottom: 120px;
+}
 
 
 /* ------------------------------------------------------------------------------
@@ -505,46 +496,45 @@ FOOTER
 ------------------------------------------------------------------------------ */
 
 footer {
-    background-color: #122562;
-    height: 35px;
-    width: 100%;
-    color: #ffffff;
-    text-align: center;
-    align-items: center;
-    display:flex;
-    justify-content: center;
-    position: fixed;
-    bottom: 0px;
-    font-family: 'Outfit', sans-serif;
+	background-color: #122562;
+	height: 35px;
+	width: 100%;
+	color: #ffffff;
+	text-align: center;
+	align-items: center;
+	display: flex;
+	justify-content: center;
+	position: fixed;
+	bottom: 0px;
+	font-family: 'Outfit', sans-serif;
 }
-
 
 /* ------------------------------------------------------------------------------
 INFO BOX
 ------------------------------------------------------------------------------ */
 #info-box {
-    position: absolute;
-    bottom: 2em;
-    right: 2em;
+	position: absolute;
+	bottom: 2em;
+	right: 2em;
 }
 
 #info-box ul {
-    list-style: none;
+	list-style: none;
 }
 
 #info-box a {
-    color: #ffffff;
-    text-decoration: none;
-    text-align: right;
-    padding: 0.5em 0;
-    transition: all 0.1s ease-out;
-    display: block;
-    text-transform: uppercase;
-    font-size: 1em;
-    font-weight: 900;
-    letter-spacing: 1px;
+	color: #ffffff;
+	text-decoration: none;
+	text-align: right;
+	padding: 0.5em 0;
+	transition: all 0.1s ease-out;
+	display: block;
+	text-transform: uppercase;
+	font-size: 1em;
+	font-weight: 900;
+	letter-spacing: 1px;
 }
 
 #info-box a:hover {
-    color: rgba(255,255,255,0.5);
+	color: rgba(255, 255, 255, 0.5);
 }
