--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -478,6 +478,20 @@ ul {
     border-radius: 15px;
 }
 
+.contenedor-largo {
+	margin-top: 20px;
+    margin-bottom: 20px;
+	height: 500px;
+	align-items: center;
+	justify-content: center;
+    background-color: #122562;
+    border-radius: 15px;
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+
+
 .izquierda {
     padding-top: 40px;
     padding-left: 20px;
@@ -497,7 +511,16 @@ ul {
 	text-align: right;
 }
 
+.arriba {
+	width: 100%;
+}
+.arriba img {
+width: 200px;
+}
 
+.abajo {
+	width: 100%;
+}
 
 
 
@@ -508,6 +531,7 @@ ul {
 
 .caja-texto {
 	padding: 10px 10px 10px 10px;
+	text-align: justify;
 }
 
 
