--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -513,10 +513,21 @@ ul {
 	padding-right: 20px;
 }
 
-.contenedor-mini {
+.contenedor-mini-m {
 	margin-top: 20px;
     margin-bottom: 20px;
 	height: 90px;
+	align-items: center;
+	justify-content: center;
+    background-color: #122562;
+    border-radius: 15px;
+	padding: 30px;
+}
+
+.contenedor-mini {
+	margin-top: 20px;
+    margin-bottom: 20px;
+	height: 150px;
 	align-items: center;
 	justify-content: center;
     background-color: #122562;
