--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,14 @@ body {
 	position: relative;
 	background-color: #e6cca9;
 	width: 100%;
-	color: white;
+}
+
+.white {
+	color: #ffffff;
+}
+
+.blue {
+	color: #122562;
 }
 
 body::-webkit-scrollbar {
@@ -501,17 +508,6 @@ ul {
 	border-radius: 50%;
 }
 
-.contenedor {
-	margin-top: 20px;
-    margin-bottom: 20px;
-	height: 400px;
-	align-items: center;
-	justify-content: center;
-    border-radius: 15px;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-
 .contenedor-mini-m {
 	margin-top: 20px;
     margin-bottom: 20px;
@@ -530,6 +526,37 @@ ul {
 	justify-content: center;
     border-radius: 15px;
 	padding: 30px;
+}
+
+.contenedor-med {
+	margin-top: 20px;
+    margin-bottom: 20px;
+	height: 200px;
+	align-items: center;
+	justify-content: center;
+    border-radius: 15px;
+	padding: 30px;
+}
+
+.contenedor-med2 {
+	margin-top: 20px;
+    margin-bottom: 20px;
+	height: 300px;
+	align-items: center;
+	justify-content: center;
+    border-radius: 15px;
+	padding: 30px;
+}
+
+.contenedor {
+	margin-top: 20px;
+    margin-bottom: 20px;
+	height: 400px;
+	align-items: center;
+	justify-content: center;
+    border-radius: 15px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 .contenedor-largo {
