--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -744,7 +744,7 @@ INFO BOX
 }
 
 #info-box a {
-	color: #ffffff;
+	color: #122562;
 	text-decoration: none;
 	text-align: right;
 	padding: 0.5em 0;
